--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -3135,6 +3135,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002d_003b-DEL"><code>C-;
+      DEL</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "gmaps.html#index-C_002d_003b-e"><code>C-; e</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href="gmaps.html">gmaps</a></td>
@@ -6494,6 +6503,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dextras.html">emacspeak-extras</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dx-_0040-h-DEL"><code>C-x
+      @ h DEL</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
