--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -822,7 +822,8 @@ When called interactively, CHAR defaults to the character after point.
     <dt id="index-User-Option-14">Variable: <strong>User
     Option</strong> <em>tts-notification-device</em></dt>
     <dd>
-      <p>Virtual ALSA device to use for notifications stream.</p>
+      <p>Virtual ALSA device to use for notifications stream. Set
+      to nil to disable a separate Notification stream.</p>
     </dd>
   </dl>
   <hr />
