--- a/manual/emacspeak_002dfeeds.html
+++ b/manual/emacspeak_002dfeeds.html
@@ -129,8 +129,24 @@ Archiving is useful when synchronizing feeds across multiple machines.
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dfeeds_002dawesome_002drss"></span>
+  <h4 class="subsubsection">12.76.1.4
+  emacspeak-feeds-awesome-rss</h4>
+  <dl>
+    <dt id="index-emacspeak_002dfeeds_002dawesome_002drss">Command:
+    <strong>emacspeak-feeds-awesome-rss</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dfeeds_002dawesome_002drss-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Display Awesome RSS OPML file read with completion.
+See etc/fixup-awesome-rss  for first-time  for instructions.
+</pre>
+      </div>
+    </dd>
   </dl><span id="emacspeak_002dfeeds_002dbrowse"></span>
-  <h4 class="subsubsection">12.76.1.4 emacspeak-feeds-browse</h4>
+  <h4 class="subsubsection">12.76.1.5 emacspeak-feeds-browse</h4>
   <dl>
     <dt id="index-emacspeak_002dfeeds_002dbrowse">Command:
     <strong>emacspeak-feeds-browse</strong> <em>(feed)</em></dt>
@@ -151,7 +167,7 @@ Archiving is useful when synchronizing feeds across multiple machines.
     </dd>
   </dl><span id=
   "emacspeak_002dfeeds_002dfastload_002dfeeds"></span>
-  <h4 class="subsubsection">12.76.1.5
+  <h4 class="subsubsection">12.76.1.6
   emacspeak-feeds-fastload-feeds</h4>
   <dl>
     <dt id="index-emacspeak_002dfeeds_002dfastload_002dfeeds">
@@ -166,7 +182,7 @@ This directly  updates emacspeak-feeds from the archive, rather than adding thos
       </div>
     </dd>
   </dl><span id="emacspeak_002dfeeds_002dopml_002ddisplay"></span>
-  <h4 class="subsubsection">12.76.1.6
+  <h4 class="subsubsection">12.76.1.7
   emacspeak-feeds-opml-display</h4>
   <dl>
     <dt id="index-emacspeak_002dfeeds_002dopml_002ddisplay">
@@ -188,7 +204,7 @@ This directly  updates emacspeak-feeds from the archive, rather than adding thos
       </div>
     </dd>
   </dl><span id="emacspeak_002dfeeds_002drestore_002dfeeds"></span>
-  <h4 class="subsubsection">12.76.1.7
+  <h4 class="subsubsection">12.76.1.8
   emacspeak-feeds-restore-feeds</h4>
   <dl>
     <dt id="index-emacspeak_002dfeeds_002drestore_002dfeeds">
@@ -204,7 +220,7 @@ Archiving is useful when synchronizing feeds across multiple machines.
       </div>
     </dd>
   </dl><span id="emacspeak_002dfeeds_002drss_002ddisplay"></span>
-  <h4 class="subsubsection">12.76.1.8
+  <h4 class="subsubsection">12.76.1.9
   emacspeak-feeds-rss-display</h4>
   <dl>
     <dt id="index-emacspeak_002dfeeds_002drss_002ddisplay">Command:
@@ -233,6 +249,13 @@ Archiving is useful when synchronizing feeds across multiple machines.
     <dd>
       <p>Table of RSS/Atom feeds. The feed list is persisted to
       file saved-feeds on exit.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-35">Variable: <strong>User
+    Option</strong> <em>emacspeak-feeds-awesome-rss</em></dt>
+    <dd>
+      <p>Location of Awesome RSS</p>
     </dd>
   </dl>
   <hr />
