--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -2252,9 +2252,33 @@ of the source buffer.
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dwizards_002dsnarf_002dsexp"></span>
+  <h4 class="subsubsection">12.209.1.95
+  emacspeak-wizards-snarf-sexp</h4>
+  <dl>
+    <dt id="index-emacspeak_002dwizards_002dsnarf_002dsexp">
+    Command: <strong>emacspeak-wizards-snarf-sexp</strong>
+    <em>(&amp;optional delete)</em></dt>
+    <dd>
+      <dl compact="compact">
+        <dt><kbd>C-; DEL</kbd></dt>
+        <dd><span id="index-C_002d_003b-DEL"></span></dd>
+        <dt><kbd>C-x @ h DEL</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-h-DEL"></span></dd>
+      </dl><span id=
+      "index-emacspeak_002dwizards_002dsnarf_002dsexp-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Snarf the contents between delimiters at point.
+Optional interactive prefix arg deletes it.
+
+(fn &amp;optional DELETE)
+</pre>
+      </div>
+    </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dspeak_002diso_002ddatetime"></span>
-  <h4 class="subsubsection">12.209.1.95
+  <h4 class="subsubsection">12.209.1.96
   emacspeak-wizards-speak-iso-datetime</h4>
   <dl>
     <dt id=
@@ -2274,7 +2298,7 @@ of the source buffer.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dsqueeze_002dblanks"></span>
-  <h4 class="subsubsection">12.209.1.96
+  <h4 class="subsubsection">12.209.1.97
   emacspeak-wizards-squeeze-blanks</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dsqueeze_002dblanks">
@@ -2297,7 +2321,7 @@ of the source buffer.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dswap_002dfg_002dand_002dbg"></span>
-  <h4 class="subsubsection">12.209.1.97
+  <h4 class="subsubsection">12.209.1.98
   emacspeak-wizards-swap-fg-and-bg</h4>
   <dl>
     <dt id=
@@ -2319,7 +2343,7 @@ of the source buffer.
       </div>
     </dd>
   </dl><span id="emacspeak_002dwizards_002dterm"></span>
-  <h4 class="subsubsection">12.209.1.98 emacspeak-wizards-term</h4>
+  <h4 class="subsubsection">12.209.1.99 emacspeak-wizards-term</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dterm">Command:
     <strong>emacspeak-wizards-term</strong> <em>(create)</em></dt>
@@ -2344,7 +2368,7 @@ term if needed.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dtex_002dtie_002dcurrent_002dword"></span>
-  <h4 class="subsubsection">12.209.1.99
+  <h4 class="subsubsection">12.209.1.100
   emacspeak-wizards-tex-tie-current-word</h4>
   <dl>
     <dt id=
@@ -2365,7 +2389,7 @@ term if needed.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dtoggle_002dmm_002ddd_002dyyyy_002ddate_002dpronouncer"></span>
-  <h4 class="subsubsection">12.209.1.100
+  <h4 class="subsubsection">12.209.1.101
   emacspeak-wizards-toggle-mm-dd-yyyy-date-pronouncer</h4>
   <dl>
     <dt id=
@@ -2384,7 +2408,7 @@ term if needed.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dtoggle_002dyyyymmdd_002ddate_002dpronouncer"></span>
-  <h4 class="subsubsection">12.209.1.101
+  <h4 class="subsubsection">12.209.1.102
   emacspeak-wizards-toggle-yyyymmdd-date-pronouncer</h4>
   <dl>
     <dt id=
@@ -2403,7 +2427,7 @@ term if needed.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dtune_002din_002dradio_002dbrowse"></span>
-  <h4 class="subsubsection">12.209.1.102
+  <h4 class="subsubsection">12.209.1.103
   emacspeak-wizards-tune-in-radio-browse</h4>
   <dl>
     <dt id=
@@ -2429,7 +2453,7 @@ Optional interactive prefix arg ‘category’ prompts for a category.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dtune_002din_002dradio_002dsearch"></span>
-  <h4 class="subsubsection">12.209.1.103
+  <h4 class="subsubsection">12.209.1.104
   emacspeak-wizards-tune-in-radio-search</h4>
   <dl>
     <dt id=
@@ -2450,7 +2474,7 @@ Optional interactive prefix arg ‘category’ prompts for a category.
       </div>
     </dd>
   </dl><span id="emacspeak_002dwizards_002dunits"></span>
-  <h4 class="subsubsection">12.209.1.104
+  <h4 class="subsubsection">12.209.1.105
   emacspeak-wizards-units</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dunits">Command:
@@ -2469,7 +2493,7 @@ Optional interactive prefix arg ‘category’ prompts for a category.
       </div>
     </dd>
   </dl><span id="emacspeak_002dwizards_002dvc_002dn"></span>
-  <h4 class="subsubsection">12.209.1.105
+  <h4 class="subsubsection">12.209.1.106
   emacspeak-wizards-vc-n</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dvc_002dn">Command:
@@ -2483,7 +2507,7 @@ Optional interactive prefix arg ‘category’ prompts for a category.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dvc_002dview_002dmode"></span>
-  <h4 class="subsubsection">12.209.1.106
+  <h4 class="subsubsection">12.209.1.107
   emacspeak-wizards-vc-view-mode</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dvc_002dview_002dmode">
@@ -2507,7 +2531,7 @@ the final or penultimate step during initialization.
       </div>
     </dd>
   </dl><span id="emacspeak_002dwizards_002dvc_002dviewer"></span>
-  <h4 class="subsubsection">12.209.1.107
+  <h4 class="subsubsection">12.209.1.108
   emacspeak-wizards-vc-viewer</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dvc_002dviewer">Command:
@@ -2530,7 +2554,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dvc_002dviewer_002drefresh"></span>
-  <h4 class="subsubsection">12.209.1.108
+  <h4 class="subsubsection">12.209.1.109
   emacspeak-wizards-vc-viewer-refresh</h4>
   <dl>
     <dt id=
@@ -2548,7 +2572,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dm_002dplayer_002dmode"></span>
-  <h4 class="subsubsection">12.209.1.109
+  <h4 class="subsubsection">12.209.1.110
   emacspeak-wizards-view-buffers-filtered-by-m-player-mode</h4>
   <dl>
     <dt id=
@@ -2570,7 +2594,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dthis_002dmode"></span>
-  <h4 class="subsubsection">12.209.1.110
+  <h4 class="subsubsection">12.209.1.111
   emacspeak-wizards-view-buffers-filtered-by-this-mode</h4>
   <dl>
     <dt id=
@@ -2602,7 +2626,7 @@ the final or penultimate step during initialization.
   </dl><span id="emacspeak_002dwizards-Options"></span>
   <h4 class="subsection">12.209.2 emacspeak-wizards Options</h4>
   <dl>
-    <dt id="index-User-Option-95">Variable: <strong>User
+    <dt id="index-User-Option-96">Variable: <strong>User
     Option</strong> <em>emacspeak-iex-api-key</em></dt>
     <dd>
       <p>Web API key for IEX Finance access. See IEX Login Console
@@ -2611,7 +2635,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-96">Variable: <strong>User
+    <dt id="index-User-Option-97">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-telephone-directory</em></dt>
     <dd>
@@ -2620,7 +2644,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-97">Variable: <strong>User
+    <dt id="index-User-Option-98">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-alpha-vantage-api-key</em></dt>
     <dd>
@@ -2630,7 +2654,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-98">Variable: <strong>User
+    <dt id="index-User-Option-99">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-find-switches-widget</em></dt>
     <dd>
@@ -2638,7 +2662,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-99">Variable: <strong>User
+    <dt id="index-User-Option-100">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-pdf-to-text-options</em></dt>
     <dd>
@@ -2646,7 +2670,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-100">Variable: <strong>User
+    <dt id="index-User-Option-101">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-personal-portfolio</em></dt>
     <dd>
@@ -2657,14 +2681,14 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-101">Variable: <strong>User
+    <dt id="index-User-Option-102">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-project-shells</em></dt>
     <dd>
       <p>List of shell-name/initial-directory pairs.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-102">Variable: <strong>User
+    <dt id="index-User-Option-103">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-remote-workstation</em></dt>
     <dd>
