--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on September 4,
+  Desktop</strong> and was last updated on September 17,
   2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -3950,39 +3950,46 @@
                   name=
                   "toc-emacspeak_002dfeeds_002datom_002ddisplay">12.76.1.3
                   emacspeak-feeds-atom-display</a></li>
+                  <li><a id=
+                  "toc-emacspeak_002dfeeds_002dawesome_002drss"
+                  href=
+                  "emacspeak_002dfeeds.html#emacspeak_002dfeeds_002dawesome_002drss"
+                  name=
+                  "toc-emacspeak_002dfeeds_002dawesome_002drss">12.76.1.4
+                  emacspeak-feeds-awesome-rss</a></li>
                   <li><a id="toc-emacspeak_002dfeeds_002dbrowse"
                   href=
                   "emacspeak_002dfeeds.html#emacspeak_002dfeeds_002dbrowse"
                   name=
-                  "toc-emacspeak_002dfeeds_002dbrowse">12.76.1.4
+                  "toc-emacspeak_002dfeeds_002dbrowse">12.76.1.5
                   emacspeak-feeds-browse</a></li>
                   <li><a id=
                   "toc-emacspeak_002dfeeds_002dfastload_002dfeeds"
                   href=
                   "emacspeak_002dfeeds.html#emacspeak_002dfeeds_002dfastload_002dfeeds"
                   name=
-                  "toc-emacspeak_002dfeeds_002dfastload_002dfeeds">12.76.1.5
+                  "toc-emacspeak_002dfeeds_002dfastload_002dfeeds">12.76.1.6
                   emacspeak-feeds-fastload-feeds</a></li>
                   <li><a id=
                   "toc-emacspeak_002dfeeds_002dopml_002ddisplay"
                   href=
                   "emacspeak_002dfeeds.html#emacspeak_002dfeeds_002dopml_002ddisplay"
                   name=
-                  "toc-emacspeak_002dfeeds_002dopml_002ddisplay">12.76.1.6
+                  "toc-emacspeak_002dfeeds_002dopml_002ddisplay">12.76.1.7
                   emacspeak-feeds-opml-display</a></li>
                   <li><a id=
                   "toc-emacspeak_002dfeeds_002drestore_002dfeeds"
                   href=
                   "emacspeak_002dfeeds.html#emacspeak_002dfeeds_002drestore_002dfeeds"
                   name=
-                  "toc-emacspeak_002dfeeds_002drestore_002dfeeds">12.76.1.7
+                  "toc-emacspeak_002dfeeds_002drestore_002dfeeds">12.76.1.8
                   emacspeak-feeds-restore-feeds</a></li>
                   <li><a id=
                   "toc-emacspeak_002dfeeds_002drss_002ddisplay"
                   href=
                   "emacspeak_002dfeeds.html#emacspeak_002dfeeds_002drss_002ddisplay"
                   name=
-                  "toc-emacspeak_002dfeeds_002drss_002ddisplay">12.76.1.8
+                  "toc-emacspeak_002dfeeds_002drss_002ddisplay">12.76.1.9
                   emacspeak-feeds-rss-display</a></li>
                 </ul>
               </li>
@@ -10092,12 +10099,19 @@
                   12.209.1.94
                   emacspeak-wizards-show-memory-used</a></li>
                   <li><a id=
+                  "toc-emacspeak_002dwizards_002dsnarf_002dsexp"
+                  href=
+                  "emacspeak_002dwizards.html#emacspeak_002dwizards_002dsnarf_002dsexp"
+                  name=
+                  "toc-emacspeak_002dwizards_002dsnarf_002dsexp">12.209.1.95
+                  emacspeak-wizards-snarf-sexp</a></li>
+                  <li><a id=
                   "toc-emacspeak_002dwizards_002dspeak_002diso_002ddatetime"
                   href=
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dspeak_002diso_002ddatetime"
                   name=
                   "toc-emacspeak_002dwizards_002dspeak_002diso_002ddatetime">
-                  12.209.1.95
+                  12.209.1.96
                   emacspeak-wizards-speak-iso-datetime</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dsqueeze_002dblanks"
@@ -10105,7 +10119,7 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dsqueeze_002dblanks"
                   name=
                   "toc-emacspeak_002dwizards_002dsqueeze_002dblanks">
-                  12.209.1.96
+                  12.209.1.97
                   emacspeak-wizards-squeeze-blanks</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dswap_002dfg_002dand_002dbg"
@@ -10113,13 +10127,13 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dswap_002dfg_002dand_002dbg"
                   name=
                   "toc-emacspeak_002dwizards_002dswap_002dfg_002dand_002dbg">
-                  12.209.1.97
+                  12.209.1.98
                   emacspeak-wizards-swap-fg-and-bg</a></li>
                   <li><a id="toc-emacspeak_002dwizards_002dterm"
                   href=
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dterm"
                   name=
-                  "toc-emacspeak_002dwizards_002dterm">12.209.1.98
+                  "toc-emacspeak_002dwizards_002dterm">12.209.1.99
                   emacspeak-wizards-term</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dtex_002dtie_002dcurrent_002dword"
@@ -10127,7 +10141,7 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dtex_002dtie_002dcurrent_002dword"
                   name=
                   "toc-emacspeak_002dwizards_002dtex_002dtie_002dcurrent_002dword">
-                  12.209.1.99
+                  12.209.1.100
                   emacspeak-wizards-tex-tie-current-word</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dtoggle_002dmm_002ddd_002dyyyy_002ddate_002dpronouncer"
@@ -10135,7 +10149,7 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dtoggle_002dmm_002ddd_002dyyyy_002ddate_002dpronouncer"
                   name=
                   "toc-emacspeak_002dwizards_002dtoggle_002dmm_002ddd_002dyyyy_002ddate_002dpronouncer">
-                  12.209.1.100
+                  12.209.1.101
                   emacspeak-wizards-toggle-mm-dd-yyyy-date-pronouncer</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dtoggle_002dyyyymmdd_002ddate_002dpronouncer"
@@ -10143,7 +10157,7 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dtoggle_002dyyyymmdd_002ddate_002dpronouncer"
                   name=
                   "toc-emacspeak_002dwizards_002dtoggle_002dyyyymmdd_002ddate_002dpronouncer">
-                  12.209.1.101
+                  12.209.1.102
                   emacspeak-wizards-toggle-yyyymmdd-date-pronouncer</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dtune_002din_002dradio_002dbrowse"
@@ -10151,7 +10165,7 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dtune_002din_002dradio_002dbrowse"
                   name=
                   "toc-emacspeak_002dwizards_002dtune_002din_002dradio_002dbrowse">
-                  12.209.1.102
+                  12.209.1.103
                   emacspeak-wizards-tune-in-radio-browse</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dtune_002din_002dradio_002dsearch"
@@ -10159,19 +10173,19 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dtune_002din_002dradio_002dsearch"
                   name=
                   "toc-emacspeak_002dwizards_002dtune_002din_002dradio_002dsearch">
-                  12.209.1.103
+                  12.209.1.104
                   emacspeak-wizards-tune-in-radio-search</a></li>
                   <li><a id="toc-emacspeak_002dwizards_002dunits"
                   href=
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dunits"
                   name=
-                  "toc-emacspeak_002dwizards_002dunits">12.209.1.104
+                  "toc-emacspeak_002dwizards_002dunits">12.209.1.105
                   emacspeak-wizards-units</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dvc_002dn" href=
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dvc_002dn"
                   name=
-                  "toc-emacspeak_002dwizards_002dvc_002dn">12.209.1.105
+                  "toc-emacspeak_002dwizards_002dvc_002dn">12.209.1.106
                   emacspeak-wizards-vc-n</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dvc_002dview_002dmode"
@@ -10179,14 +10193,14 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dvc_002dview_002dmode"
                   name=
                   "toc-emacspeak_002dwizards_002dvc_002dview_002dmode">
-                  12.209.1.106
+                  12.209.1.107
                   emacspeak-wizards-vc-view-mode</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dvc_002dviewer"
                   href=
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dvc_002dviewer"
                   name=
-                  "toc-emacspeak_002dwizards_002dvc_002dviewer">12.209.1.107
+                  "toc-emacspeak_002dwizards_002dvc_002dviewer">12.209.1.108
                   emacspeak-wizards-vc-viewer</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dvc_002dviewer_002drefresh"
@@ -10194,7 +10208,7 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dvc_002dviewer_002drefresh"
                   name=
                   "toc-emacspeak_002dwizards_002dvc_002dviewer_002drefresh">
-                  12.209.1.108
+                  12.209.1.109
                   emacspeak-wizards-vc-viewer-refresh</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dm_002dplayer_002dmode"
@@ -10202,7 +10216,7 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dm_002dplayer_002dmode"
                   name=
                   "toc-emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dm_002dplayer_002dmode">
-                  12.209.1.109
+                  12.209.1.110
                   emacspeak-wizards-view-buffers-filtered-by-m-player-mode</a></li>
                   <li><a id=
                   "toc-emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dthis_002dmode"
@@ -10210,7 +10224,7 @@
                   "emacspeak_002dwizards.html#emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dthis_002dmode"
                   name=
                   "toc-emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dthis_002dmode">
-                  12.209.1.110
+                  12.209.1.111
                   emacspeak-wizards-view-buffers-filtered-by-this-mode</a></li>
                 </ul>
               </li>
