--- a/manual/Emacspeak-Commands-And-Options.html
+++ b/manual/Emacspeak-Commands-And-Options.html
@@ -1230,8 +1230,7 @@
       <td align="left" valign="top">• <a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
       <td>&nbsp;&nbsp;</td>
-      <td align="left" valign="top">Implements Emacspeak’s core
-      speech services.</td>
+      <td align="left" valign="top">Implements core services.</td>
     </tr>
     <tr>
       <td align="left" valign="top">• <a href=
