--- a/manual/emacspeak_002ddbus.html
+++ b/manual/emacspeak_002ddbus.html
@@ -197,8 +197,8 @@ This is a hidden buffer that is made current so we automatically
 switch to a screen-saver soundscape.
 
 In addition to any hooks its parent mode ‘special-mode’ might have
-run, this mode runs the hook ‘emacspeak-screen-saver-mode-hook’, as the
-final or penultimate step during initialization.
+run, this mode runs the hook ‘emacspeak-screen-saver-mode-hook’, as
+the final or penultimate step during initialization.
 
 key             binding
 —             ——-
