--- a/manual/emacspeak_002dfiltertext.html
+++ b/manual/emacspeak_002dfiltertext.html
@@ -111,8 +111,8 @@ key             binding
 r               emacspeak-filtertext-revert
 
 In addition to any hooks its parent mode ‘text-mode’ might have run,
-this mode runs the hook ‘emacspeak-filtertext-mode-hook’, as the
-final or penultimate step during initialization.
+this mode runs the hook ‘emacspeak-filtertext-mode-hook’, as the final
+or penultimate step during initialization.
 </pre>
       </div>
     </dd>
