--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -956,9 +956,9 @@ M-,             emacspeak-m-player-set-clip-start
 M-.             emacspeak-m-player-set-clip-end
 M-l             emacspeak-m-player-load-playlist
 
-In addition to any hooks its parent mode ‘comint-mode’ might have
-run, this mode runs the hook ‘emacspeak-m-player-mode-hook’, as the
-final or penultimate step during initialization.
+In addition to any hooks its parent mode ‘comint-mode’ might have run,
+this mode runs the hook ‘emacspeak-m-player-mode-hook’, as the final
+or penultimate step during initialization.
 </pre>
       </div>
     </dd>
