--- a/manual/emacspeak_002dmaths.html
+++ b/manual/emacspeak_002dmaths.html
@@ -261,8 +261,8 @@ k               emacspeak-maths-up
 l               emacspeak-maths-right
 
 In addition to any hooks its parent mode ‘special-mode’ might have
-run, this mode runs the hook ‘emacspeak-maths-spoken-mode-hook’, as the
-final or penultimate step during initialization.
+run, this mode runs the hook ‘emacspeak-maths-spoken-mode-hook’, as
+the final or penultimate step during initialization.
 </pre>
       </div>
     </dd>
