--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -812,14 +812,11 @@ Seconds value is also placed in the kill-ring.
     <dt id="index-emacspeak_002dspeak_002dface_002dbackward">
     Command: <strong>emacspeak-speak-face-backward</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-z ,</kbd></dt>
-        <dd><span id="index-C_002dz-_002c"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dspeak_002dface_002dbackward-1"></span>
       <div class="format">
         <pre class=
-        "format">Property search for face at point  — see M-x text-property-search-backward
+        "format">Property search for face at point see M-x text-property-search-backward
 </pre>
       </div>
     </dd>
@@ -850,10 +847,7 @@ Seconds value is also placed in the kill-ring.
     <dt id="index-emacspeak_002dspeak_002dface_002dforward">
     Command: <strong>emacspeak-speak-face-forward</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-z .</kbd></dt>
-        <dd><span id="index-C_002dz-_002e"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dspeak_002dface_002dforward-1"></span>
       <div class="format">
         <pre class=
@@ -1124,7 +1118,7 @@ See documentation for command run-at-time for details on time-spec.
       </span>
       <div class="format">
         <pre class=
-        "format">Speaks time value specified as microseconds  since epoch, e.g. as from float-time.
+        "format">Speaks time value specified as microseconds  since epoch.
 
 (fn MS)
 </pre>
@@ -1146,7 +1140,7 @@ See documentation for command run-at-time for details on time-spec.
       </span>
       <div class="format">
         <pre class=
-        "format">Speaks time value specified as milliseconds  since epoch, e.g. as from float-time.
+        "format">Speaks time value specified as milliseconds  since epoch..
 
 (fn MS)
 </pre>
@@ -1581,7 +1575,7 @@ normally bound to C-e M-i.
       </span>
       <div class="format">
         <pre class=
-        "format">Speaks time value specified as seconds  since epoch, e.g. as from float-time.
+        "format">Speaks time value specified as seconds  since epoch.
 
 (fn SECONDS)
 </pre>
@@ -1728,7 +1722,7 @@ any other key to speak entire sexp.
       </dl><span id="index-emacspeak_002dspeak_002dtime-2"></span>
       <div class="format">
         <pre class="format">Speak the time.
-Spoken time  is available in the *notifications* buffer via C-h N.
+Spoken time  is available via C-h N.
 Optional interactive prefix arg ‘C-u’invokes world clock.
 Timezone is specified using minibuffer completion.
 Second interactive prefix sets clock to new timezone.
@@ -1755,7 +1749,7 @@ Second interactive prefix sets clock to new timezone.
       <div class="format">
         <pre class=
         "format">Announce version information for running emacspeak.
-Optional interactive prefix arg ‘speak-rev’ speaks only the Git revision number.
+Optional interactive prefix arg ‘speak-rev’ speaks only the Git revision.
 
 (fn &amp;optional SPEAK-REV)
 </pre>
@@ -2121,7 +2115,7 @@ current local  value to the result.
       "index-emacspeak_002dtoggle_002dspeak_002dmessages-1"></span>
       <div class="format">
         <pre class=
-        "format">Toggle the state of whether emacspeak echoes messages.
+        "format">Toggle  state of whether emacspeak echoes messages.
 </pre>
       </div>
     </dd>
