--- a/manual/Emacspeak-Commands-And-Options.html
+++ b/manual/Emacspeak-Commands-And-Options.html
@@ -126,8 +126,8 @@
       <td align="left" valign="top">• <a href="dtk_002dspeak.html"
       accesskey="5">dtk-speak</a></td>
       <td>&nbsp;&nbsp;</td>
-      <td align="left" valign="top">Provides Emacs Lisp interface
-      to speech server.</td>
+      <td align="left" valign="top">Interface to speech
+      server.</td>
     </tr>
     <tr>
       <td align="left" valign="top">• <a href="emacspeak.html"
@@ -407,8 +407,7 @@
       <td align="left" valign="top">• <a href=
       "emacspeak_002ddired.html">emacspeak-dired</a></td>
       <td>&nbsp;&nbsp;</td>
-      <td align="left" valign="top">Speech enable Dired Mode – A
-      powerful File Manager.</td>
+      <td align="left" valign="top">Speech enable Dired Mode.</td>
     </tr>
     <tr>
       <td align="left" valign="top">• <a href=
