--- a/manual/emacspeak_002ddired.html
+++ b/manual/emacspeak_002ddired.html
@@ -206,7 +206,8 @@ unless ‘dired-listing-switches’ contains -l
       "index-emacspeak_002ddired_002dopen_002dthis_002dfile-1"></span>
       <div class="format">
         <pre class=
-        "format">Smart dired opener. Invokes appropriate Emacspeak handler on  current file in DirEd.
+        "format">Smart dired opener. Invokes appropriate Emacspeak handler on
+current file in DirEd.
 </pre>
       </div>
     </dd>
