--- a/manual/emacspeak_002dfeeds.html
+++ b/manual/emacspeak_002dfeeds.html
@@ -177,7 +177,9 @@ See etc/fixup-awesome-rss  for first-time  for instructions.
       "index-emacspeak_002dfeeds_002dfastload_002dfeeds-1"></span>
       <div class="format">
         <pre class="format">Fast load list of feeds from archive.
-This directly  updates emacspeak-feeds from the archive, rather than adding those entries to the current set of subscribed feeds.
+This directly updates emacspeak-feeds from the archive, rather
+than adding those entries to the current set of subscribed
+feeds.
 </pre>
       </div>
     </dd>
