--- a/manual/emacspeak_002dgoogle.html
+++ b/manual/emacspeak_002dgoogle.html
@@ -112,7 +112,8 @@
       <div class="format">
         <pre class=
         "format">Perform a Google Knowledge Graph search.
-Optional interactive prefix arg ‘limit’ prompts for number of results, default is 1.
+Optional interactive prefix arg ‘limit’ prompts for number of
+results, default is 1.
 
 (fn QUERY &amp;optional LIMIT)
 </pre>
