--- a/manual/emacspeak_002docr.html
+++ b/manual/emacspeak_002docr.html
@@ -144,10 +144,11 @@ C-e C-o to launch emacspeak-ocr-mode, and press
       <div class="format">
         <pre class=
         "format">Run OCR engine on current image after flip-flopping it.
-Useful if you’ve scanned a page upside down and are using an engine that does not automatically flip the image for you.
-You need the imagemagik family of tools — we use mogrify to transform the image.
-Prompts for image file if file corresponding to the expected
-‘current page’ is not found.
+Useful if you’ve scanned a page upside down and are using an
+engine that does not automatically flip the image for you.  You
+need the imagemagik family of tools — we use mogrify to
+transform the image.  Prompts for image file if file
+corresponding to the expected ‘current page’ is not found.
 </pre>
       </div>
     </dd>
