--- a/manual/gm_002dnnir.html
+++ b/manual/gm_002dnnir.html
@@ -80,7 +80,8 @@
       <div class="format">
         <pre class="format">Use GMail search syntax exclusively.
 See https://support.google.com/mail/answer/7190?hl=en for syntax.
- note: nnimap-address etc are available as local vars if needed in these functions.
+ note: nnimap-address etc are available as local vars if needed
+ in these functions.
 
 (fn QUERY)
 </pre>
